# rumath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/rumath/: math.h  matrix.h  projection.h  quaternion.h  vector.h  vector_extension.h
include/rumath/core/: math.h
src/: math.c  matrix.c  projection.c  quaternion.c  vector.c
